refactor: migrate Arrays.asList to List.of() factory method (#751)
Motivation:
Java 9+ List.of() provides concise, immutable collection creation.

Modification:
Replace Arrays.asList() with List.of() across 5 files.
Update imports accordingly.

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization